@@ -1,7 +1,7 @@
 module ActiveMerchant #:nodoc:
   module Billing #:nodoc:
     class PayTraceGateway < Gateway
-      self.test_url = 'https://api.paytrace.com'
+      self.test_url = 'https://api.sandbox.paytrace.com'
       self.live_url = 'https://api.paytrace.com'
 
       self.supported_countries = ['US']
@@ -169,19 +169,21 @@ module ActiveMerchant #:nodoc:
         transcript.
           gsub(%r((Authorization: Bearer )[a-zA-Z0-9:_]+), '\1[FILTERED]').
           gsub(%r(("credit_card\\?":{\\?"number\\?":\\?")\d+), '\1[FILTERED]').
-          gsub(%r(("cvv\\?":\\?")\d+), '\1[FILTERED]').
+          gsub(%r(("csc\\?":\\?")\d+), '\1[FILTERED]').
           gsub(%r(("username\\?":\\?")\w+@+\w+.+\w+), '\1[FILTERED]').
+          gsub(%r(("username\\?":\\?")\w+), '\1[FILTERED]').
           gsub(%r(("password\\?":\\?")\w+), '\1[FILTERED]').
           gsub(%r(("integrator_id\\?":\\?")\w+), '\1[FILTERED]')
       end
 
       def acquire_access_token
         post = {}
+        base_url = (test? ? test_url : live_url)
         post[:grant_type] = 'password'
         post[:username] = @options[:username]
         post[:password] = @options[:password]
         data = post.collect { |key, value| "#{key}=#{CGI.escape(value.to_s)}" }.join('&')
-        url = live_url + '/oauth/token'
+        url = base_url + '/oauth/token'
         oauth_headers = {
           'Accept'            => '*/*',
           'Content-Type'      => 'application/x-www-form-urlencoded'
@@ -288,6 +290,7 @@ module ActiveMerchant #:nodoc:
           post[:credit_card][:number] = payment.number
           post[:credit_card][:expiration_month] = payment.month
           post[:credit_card][:expiration_year] = payment.year
+          post[:csc] = payment.verification_value
         end
       end
 
